--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,7 +2,8 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="6dip"
-    android:background="@drawable/state_drawable">
+    android:background="@drawable/state_drawable"
+    android:id="@+id/list_item">
 
     <TextView
         android:id="@+id/secondLine"
